--- a/templates/browse.html
+++ b/templates/browse.html
@@ -40,17 +40,18 @@
       <div class="col-12">
 	<h1 class="font-semibold">ERECTI <span class="font-thin">FIRE</span></h1>
 	
+	
 	<br>
       </div><!-- /col-12 -->
     </div><!-- /row -->
     <div id="home-row-2" class="row clearfix">
       <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="4">
-	  <a href="/edit">
-	    <img src="{{url_for('static', filename='images/s02.png')}}"></a></div><span>Earn Tinder</span></div>
+	  <a href="/youressays">
+	    <img src="{{url_for('static', filename='images/s03.png')}}"></a></div><span>Your Essays</span></div>
       <div class="col-12 col-sm-4"></div>
       <div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="5">
 	  <a href="/">
-	    <img src="{{url_for('static', filename='images/s03.png')}}"></a></div><span>Home</span></div>
+	    <img src="{{url_for('static', filename='images/s04.png')}}"></a></div><span>Home</span></div>
     </div><!-- /row -->
   </div><!-- /container -->
 </div><!-- /slide1 -->
