--- a/templates/home.html
+++ b/templates/home.html
@@ -57,6 +57,7 @@
 	Submit your essay via Google Drive Link: <input type="text" name="link">
   	<input type="submit" name="button" value="Submit"><br>
       </form>
+	<br>Make sure your link sharing permissions are set to allow others to comment.<br> Use the url created by docs, not the browser url.
       <!--Your previous essays:
 	  {% for item in e %}
 	  <br>{{item}}
